--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "8c68231a-a1d7-44d5-9387-d15e2d77de63"
+      "id": "fe12e614-3c27-40f2-ab5a-a402d8172433"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "9d9e8f87-76c1-4492-b8a7-9ba5e9149939"
+      "id": "b3a85128-bcd1-4aae-b68c-56dbe767e56d"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "121f50a6-456b-4b81-8885-59b366bc8bb0"
+      "id": "bb893efb-53b5-4539-9604-d3197953ab0d"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "adda86be-ded1-4394-b2ff-3bf347f52839"
+      "id": "65492225-43ca-42ff-a4d3-d1c5c96cb581"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "368f81bb-7e64-4eb0-98fe-7afaf282a654"
+      "id": "3908315a-083d-487c-bb1c-42ebf273cb17"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "56d68e7f-f57f-49b8-946e-7ec1b247bd50"
+      "id": "b6c9e0d6-1c1a-49d3-a9da-ee32015cd2f0"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "99cbe3ae-45ee-43fe-b127-966a21359695"
+      "id": "262aadea-dc66-48a1-b85b-d3cb0f7a2e83"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "dbcedea5-99f9-4c29-882a-5c70327d7c73"
+      "id": "9fc58bf9-794e-4ff2-bbef-95b826454a76"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "c19b5c4d-1aed-44e4-82e3-c8b98a0dde0c"
+      "id": "5f960576-4e6b-4f6d-8d4f-45c9486c43da"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "c07e65d2-ac60-45a5-8bfb-451d32bd35e8"
+      "id": "03a24350-fee2-498e-a16d-1cb9a7233907"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "f3fb74d8-858a-4956-a685-cfd3a0f48ac1"
+      "id": "58e64328-841f-4888-bfe6-7022001f42ae"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "d41a740c-55ee-4a11-9317-b33ac2ca13cc"
+      "id": "47a10258-243b-4b8a-9294-3d506807b075"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "b739a77b-6cac-4244-aba0-dc28fa995120"
+      "id": "6e186a18-3ab3-4aa0-9cd4-be7f611274db"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "89d789e6-15fc-4f7a-996b-f9d8850573b5"
+      "id": "3a472f5e-ac58-4767-9bbe-f4368346e566"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "333f9cf5-fbfb-4749-8be1-97f4f2bb6db8"
+      "id": "8d0b4535-e501-4be3-9712-09366dc078e7"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "ab05ff81-6bfb-45ef-b2e9-b80858fa2f77"
+      "id": "53eaa8c0-315b-487c-b534-143754f07026"
     },
     {
       "cell_type": "code",
