--- a/docs/posts/13wk-2.out.ipynb
+++ b/docs/posts/13wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "dfecd882-f443-4d66-a825-9a8af8320421"
+      "id": "6620eb5f-6b5a-4aaf-9b52-a52b21edf5a0"
     },
     {
       "cell_type": "code",
@@ -43,7 +43,7 @@
         "\n",
         "# 3. Imports"
       ],
-      "id": "37e4b1eb-8252-4deb-9620-ab7891e29cd5"
+      "id": "880276f0-509a-4668-920c-ffa86ebbbd5e"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
         "\n",
         "`-` 버튼을 아무거나 누르는 함수를 구현해보자."
       ],
-      "id": "1e30648d-a34a-48f6-a2e4-e9afc5990bf6"
+      "id": "d712d9e5-58a2-4cd8-9d97-2e39a4529f8d"
     },
     {
       "cell_type": "code",
@@ -110,7 +110,7 @@
       "source": [
         "`-` 보상을 주는 함수를 구현해보자."
       ],
-      "id": "2f24259b-be7c-4612-86c0-8af2af7178fc"
+      "id": "f68c8e46-0805-4058-a412-983f0f71b5c7"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
       "source": [
         "`-` 아무버튼이나 10번정도 눌러보면서 데이터를 쌓아보자."
       ],
-      "id": "11c9ccc4-d1bc-4dcb-bb17-6c3f24c81ab7"
+      "id": "357e00fb-a811-496c-8f3c-81695bbc8675"
     },
     {
       "cell_type": "code",
@@ -192,7 +192,7 @@
         "\n",
         "-   여기에서 $\\to$의 과정을 체계화 시킨 학문이 강화학습"
       ],
-      "id": "e5127d0e-09e6-41fb-847f-93fdd4707039"
+      "id": "adbc6da3-cd1c-4e62-bf32-e30179d1a2fa"
     },
     {
       "cell_type": "code",
@@ -257,7 +257,7 @@
         "[1] `button1`을 눌러야 하는건 맞지만 20번에 한번정도의 실수는 눈감아\n",
         "주는 조건"
       ],
-      "id": "11695e48-a2a4-4228-814d-fad7d0ccd866"
+      "id": "52a78b69-aedd-4e7d-b07c-9317e2a1b647"
     },
     {
       "cell_type": "code",
@@ -351,7 +351,7 @@
       "source": [
         "`-` 깨달은자 – 게임클리어"
       ],
-      "id": "ab14e8cf-06d7-4fcb-8490-b2f8c13cc706"
+      "id": "250972c0-5269-4bf4-b0e9-8651e7d03462"
     },
     {
       "cell_type": "code",
@@ -413,9 +413,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## B. 수정1: `action_space`의 수정"
+        "## B. 수정1: `action_space` 수정"
       ],
-      "id": "4ef0719f-9f15-435e-928e-963c9c63dad7"
+      "id": "3a35ed0d-973f-4f36-9ceb-c95029f98c21"
     },
     {
       "cell_type": "code",
@@ -436,7 +436,7 @@
       "source": [
         "`-` 좋은점1: sample"
       ],
-      "id": "fc3cd2f5-ce84-4d2e-97c5-810e875e0214"
+      "id": "5f496ddb-6341-4cd5-9f6c-84f257736988"
     },
     {
       "cell_type": "code",
@@ -474,7 +474,7 @@
       "source": [
         "`-` 좋은점2: in"
       ],
-      "id": "76f00a34-0d2b-4554-ac7c-dd21489ff5ac"
+      "id": "39edeb46-808c-46c8-997a-9a3b786f132f"
     },
     {
       "cell_type": "code",
@@ -518,7 +518,7 @@
       "source": [
         "`-` 코드 1차수정"
       ],
-      "id": "b036e9c2-a82d-416d-993d-97475dec4aed"
+      "id": "ff55435f-4859-4399-a64d-c5d36d037ef1"
     },
     {
       "cell_type": "code",
@@ -611,11 +611,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## C. 수정2: `Env` 클래스구현\n",
+        "## C. 수정2: `Env` 구현\n",
         "\n",
         "`-` env 클래스 선언"
       ],
-      "id": "eb399e50-f43a-4e4a-92de-1a4c18fc5e98"
+      "id": "7e60c00f-367c-4e39-aa97-7342077e45da"
     },
     {
       "cell_type": "code",
@@ -691,11 +691,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## D. 수정3: `Agent` 클래스 구현 (랜덤행동)\n",
+        "## D. 수정3: `Agent` 구현 (인간지능)\n",
         "\n",
         "`-` Agent 클래스를 만들자. (액션을 하고, 환경에서 받은 reward를 간직)"
       ],
-      "id": "7888e92e-55b6-48e5-a252-4588c72a5b7b"
+      "id": "a75cd76f-3c4a-4c05-83c2-2a0192602b59"
     },
     {
       "cell_type": "code",
@@ -729,7 +729,7 @@
         "\n",
         "**시점0**: init"
       ],
-      "id": "27b3be70-cf51-42b0-b1d0-14e07f08ec07"
+      "id": "486be37a-a810-4622-a34a-9d53f3adf51c"
     },
     {
       "cell_type": "code",
@@ -762,7 +762,7 @@
       "source": [
         "**시점1**: agent \\>\\> env"
       ],
-      "id": "ff9578ab-3c97-4693-acf0-fa753b523cee"
+      "id": "3d66d50d-c75d-4e9a-bd48-69f933b8ed10"
     },
     {
       "cell_type": "code",
@@ -806,7 +806,7 @@
       "source": [
         "**시점2**: agent \\<\\< env"
       ],
-      "id": "e846a8d7-ebe5-43a5-ac9d-ed336f859020"
+      "id": "dd28e140-6220-4021-a7a9-77ee17e0b0e7"
     },
     {
       "cell_type": "code",
@@ -874,7 +874,7 @@
       "source": [
         "– 전체코드 –"
       ],
-      "id": "6e718508-00bc-46c8-88d9-8b995199fee3"
+      "id": "41a4f9b2-64e4-4dd7-b8ea-5c337c7d8b40"
     },
     {
       "cell_type": "code",
@@ -968,7 +968,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## E. 수정4: `Agent.learn()` 구현\n",
+        "## E. 수정4: `Agent` 구현 (인공지능)\n",
         "\n",
         "`-` Game1에 대한 생각:\n",
         "\n",
@@ -1015,7 +1015,7 @@
         "\n",
         "[1] `button1`을 누른다"
       ],
-      "id": "302408d9-6d8a-407f-bd3b-e62923ae897c"
+      "id": "fa8b2bd2-c508-42e2-aa05-75781188397d"
     },
     {
       "cell_type": "code",
@@ -1090,7 +1090,7 @@
       "source": [
         "`-` 최종코드정리"
       ],
-      "id": "2f5be442-f480-43cb-a407-b4d8ac872edd"
+      "id": "bbc7fa5c-cbb7-4dcc-abf6-8ba841dae8c9"
     },
     {
       "cell_type": "code",
@@ -1243,7 +1243,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.10.13"
     }
   }
 }
