--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "61d8d211-91b6-461e-b954-ec06e6b4c140"
+      "id": "444b77a2-ae54-4304-8535-8110f2c5c0bb"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "d347bf33-ae00-4ce9-ac0c-d531012c71e2"
+      "id": "16743c46-56ae-40e2-9727-0cba275b8c68"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "83873550-5bd3-4f00-92dd-0639e8f7ef9f"
+      "id": "2c28bc33-2618-4efc-a324-16ffb1dcf2e8"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "0ab2d22a-5c1c-499a-8126-eccc5f545d79"
+      "id": "57552544-d98d-437c-b25a-f3e9201c1ad3"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "68f52d9f-3050-4ed5-bfd8-e70dd1ef46ea"
+      "id": "704d3d4f-63ab-4683-b957-bfd5128a95db"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "d24cd158-0600-41bc-9009-2b8e46776ea2"
+      "id": "f83ee61a-41b2-4d53-adaa-c0163991674f"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "b0bf4b90-5a9a-45b1-b4f7-fee76e286db2"
+      "id": "74b2c065-0ef4-481c-879d-c1023d1888ba"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "1feda3c9-88a9-4124-8612-d509a6e8f5dc"
+      "id": "c4081fd8-8339-480c-884b-490527774541"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "ef31e03b-77b9-41ee-8687-31f594839d1c"
+      "id": "c3417430-03e6-4044-9e6f-04974ac0d626"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "922041fc-501e-4bdb-9087-7a271e403d8f"
+      "id": "85bfd233-8d9e-47e5-83f3-cfec4a909c33"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "a57ad187-7b06-43c2-ad11-f34e88347f8c"
+      "id": "15463ede-93dc-462d-a32b-643044d564ef"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "97c34058-8125-4705-a2a5-92a2889505d4"
+      "id": "7db783da-207c-4a28-b0d8-d068b6fbc22e"
     },
     {
       "cell_type": "code",
@@ -491,71 +491,15 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix}\n",
-        "1.2200 & 0.4900 \\\\\n",
-        "1.1700 & 0.4400 \\\\\n",
-        "1.2100 & -0.4500 \\\\\n",
-        "1.2000 & -0.5000 \\\\\n",
-        "-1.2000 & 0.5100 \\\\\n",
-        "-1.2300 & 0.4800 \\\\\n",
-        "-1.2000 & -0.4800 \\\\\n",
-        "-1.1900 & -0.4900 \\\\\n",
-        "0.2000 & 0.0000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
-        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
-        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
-        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
-        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
-        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
-        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
-        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
-        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
-        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
-        "1.2100 \\\\\n",
-        "1.2500 \\\\\n",
-        "1.1000 \\\\\n",
-        "1.1100 \\\\\n",
-        "1.1200 \\\\\n",
-        "1.1300 \\\\\n",
-        "1.1400 \\\\\n",
-        "1.1200 \\\\\n",
-        "3.6000\n",
-        "\\end{bmatrix} +\\begin{bmatrix}\n",
-        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
-        "\\end{bmatrix}\\\\ \\\\\n",
-        "=~& \\begin{bmatrix}\n",
-        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
-        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
-        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
-        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
-        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
-        "\\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
-        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
-        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
-        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
-        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
-        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
-        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
-        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
-        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
-        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -572,7 +516,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "beaf479c-771d-4464-9833-3ad69abcf529"
+      "id": "722e22a6-c9b9-4d1a-88e1-209b504aa1ad"
     },
     {
       "cell_type": "code",
@@ -692,7 +636,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "82a3148b-9796-4ce5-8f0a-27947a8bacae"
+      "id": "138f6cc9-baea-4e72-b705-58f2f5c6a0dc"
     },
     {
       "cell_type": "code",
@@ -713,7 +657,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "d06e5ae4-5c73-4495-8ce4-6d973777fb85"
+      "id": "cb85469c-9046-487c-ba9f-6f6f88f15f6d"
     },
     {
       "cell_type": "code",
@@ -748,7 +692,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "7c33ca9a-e04f-4801-b8ae-06633460e236"
+      "id": "2afb01cb-a660-4633-bf65-fa0c05ff93c9"
     },
     {
       "cell_type": "code",
@@ -800,7 +744,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "d3efa949-962d-4c59-8172-34c6cc918fa6"
+      "id": "a29cf5c0-1ff0-4703-a351-643c613b090a"
     },
     {
       "cell_type": "code",
@@ -825,7 +769,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "389012fb-7d47-444e-9748-38629435117b"
+      "id": "a9b3d11e-426e-415d-8a8c-aa9d1385b9d3"
     },
     {
       "cell_type": "code",
@@ -867,7 +811,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "289308b5-cd66-4c5f-9c57-10ad8e1afd48"
+      "id": "7b1293af-ab4b-4c30-922e-4f0390dcdcdd"
     },
     {
       "cell_type": "code",
@@ -890,7 +834,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "56125552-5c02-4f20-9385-6dcf5132d2a7"
+      "id": "dac95a39-1bb4-42d1-a52b-7739b1163be6"
     },
     {
       "cell_type": "code",
@@ -922,7 +866,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "609480c3-12a4-4ef2-918b-ec56967326ba"
+      "id": "3cccfbfa-ddc5-4777-8530-787dd2ea13d2"
     },
     {
       "cell_type": "code",
@@ -942,7 +886,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "b4082f4d-8d9f-4e9c-a77b-1e9a2a38e168"
+      "id": "5360c7d0-60f9-4e36-ac51-f8127460efba"
     },
     {
       "cell_type": "code",
@@ -976,7 +920,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "d5cb4d6b-42e4-4142-8b79-1bf03ed4f25c"
+      "id": "3fdec342-a32d-499f-97c8-d4322aee7964"
     },
     {
       "cell_type": "code",
@@ -997,7 +941,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "665292b3-4adc-4b17-af45-64a56c8d1460"
+      "id": "3bdafe7f-a155-4a5d-a53c-00511b07ba95"
     },
     {
       "cell_type": "code",
@@ -1029,7 +973,7 @@
       "source": [
         "(update)"
       ],
-      "id": "ac58853f-8302-48fe-b326-09af06d4d2df"
+      "id": "b2383529-4ea6-44ff-bb8b-0fa98b8e7c1e"
     },
     {
       "cell_type": "code",
@@ -1049,7 +993,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "6b1b49f4-7061-45de-8f7d-e495f2bf7106"
+      "id": "607e4642-3b87-4e18-8d28-77031ad9935e"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1025,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "17c75e66-bb40-4ea2-9afa-cb4347b217d5"
+      "id": "2df06e37-64c4-4105-9be9-e39daa3db416"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1045,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "23ba16d2-9c1e-4e8f-a3cd-4c2123034ae5"
+      "id": "3c7a8aa1-b81c-4eb7-90f3-1109e625f9b1"
     },
     {
       "cell_type": "code",
@@ -1133,7 +1077,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "f67636c5-4d0b-40d5-9a12-6adcc759935a"
+      "id": "0e0692dc-41e7-4dd7-974e-638ceea6f714"
     },
     {
       "cell_type": "code",
@@ -1199,7 +1143,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "49dc5088-1779-49b0-b621-f83709640b74"
+      "id": "a2fb615d-e2fe-45af-9c7e-b585822caf32"
     },
     {
       "cell_type": "code",
@@ -1236,7 +1180,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "4da46f40-d3b8-412f-823d-ab22ae2afc88"
+      "id": "809b9306-5d8a-4e21-8680-1dacdd1d7e5e"
     },
     {
       "cell_type": "code",
@@ -1290,7 +1234,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "bdaee804-b8c8-4065-9c32-3708db7acb82"
+      "id": "2412adc3-b9f9-4701-81bd-5e9554770f42"
     },
     {
       "cell_type": "code",
@@ -1310,7 +1254,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "3e0f93c3-220a-4ca1-ba56-66c13bc0fde2"
+      "id": "eccd9202-19d3-4cc7-937d-d123eb442dbb"
     },
     {
       "cell_type": "code",
@@ -1350,7 +1294,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "2ef5d19e-1ab7-4157-8ea3-e635b3b84c72"
+      "id": "2be79d37-af17-486b-8bad-52d234923215"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1318,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "290ce8b3-5d19-44d6-8571-9a1582661903"
+      "id": "4955da05-b102-488d-accb-57334205aecf"
     },
     {
       "cell_type": "code",
@@ -1428,7 +1372,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "9136c6b4-61f5-4cb7-8cfe-b9af28727223"
+      "id": "27aa6298-cf90-46ec-ac8c-ee48d7112864"
     },
     {
       "cell_type": "code",
@@ -1449,7 +1393,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "e2ff4e5f-8d6c-40a3-aa6f-813f3fb76ac5"
+      "id": "a1251797-b2a2-4a0a-b8c8-032ed16cc27d"
     },
     {
       "cell_type": "code",
