--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "fe12e614-3c27-40f2-ab5a-a402d8172433"
+      "id": "1662d45f-2466-4e8f-9cf2-29fe9c3942a1"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "b3a85128-bcd1-4aae-b68c-56dbe767e56d"
+      "id": "77efdf2c-6f2f-4324-a6b7-7748fe0f76a2"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "bb893efb-53b5-4539-9604-d3197953ab0d"
+      "id": "d10bfade-3d61-4732-9561-783dc41c9f57"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "65492225-43ca-42ff-a4d3-d1c5c96cb581"
+      "id": "161d507a-bddd-43fd-ad92-187a2abfc8df"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "3908315a-083d-487c-bb1c-42ebf273cb17"
+      "id": "3eee571d-38f0-4d23-8e63-6e9bb4f688a4"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "b6c9e0d6-1c1a-49d3-a9da-ee32015cd2f0"
+      "id": "43c7d4d9-1d2c-4cb5-a74e-af6427902de6"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "262aadea-dc66-48a1-b85b-d3cb0f7a2e83"
+      "id": "9f37274b-8489-4b15-8efb-e6dae22d23dd"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "9fc58bf9-794e-4ff2-bbef-95b826454a76"
+      "id": "8dcc7823-f4d0-426f-978d-5d467cc03b54"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "5f960576-4e6b-4f6d-8d4f-45c9486c43da"
+      "id": "907ec672-b82e-49c1-beac-efbcb91389c7"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "03a24350-fee2-498e-a16d-1cb9a7233907"
+      "id": "91a80406-72d7-40e2-9eff-e14827c4f620"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "58e64328-841f-4888-bfe6-7022001f42ae"
+      "id": "30c94d20-64e9-4892-9145-e5fb54cddd62"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "47a10258-243b-4b8a-9294-3d506807b075"
+      "id": "c4e66b71-7ce8-4058-99ab-11e6a7e574e7"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "6e186a18-3ab3-4aa0-9cd4-be7f611274db"
+      "id": "7ccd7c7e-dcdb-4e4f-8ce9-e13a6960b36b"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "3a472f5e-ac58-4767-9bbe-f4368346e566"
+      "id": "435cbbc8-6431-4854-9f42-886369565d98"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "8d0b4535-e501-4be3-9712-09366dc078e7"
+      "id": "7dc034ed-7c24-4347-9037-59c615db79bf"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "53eaa8c0-315b-487c-b534-143754f07026"
+      "id": "95cb38d6-a514-4b58-a773-5ff4148e1828"
     },
     {
       "cell_type": "code",
