--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "2b018d3b-c7fd-4c9d-b86a-65cedc80a232"
+      "id": "6d08ac69-23d0-4c5b-ad7a-a617cff9eeb1"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "61b53524-5658-436c-a528-10f3bea5fc0f"
+      "id": "d44a8746-bb69-41b1-a2a5-3e52c0ae69e5"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "0cd683f4-b9af-40f7-948b-1587ad6608eb"
+      "id": "392d89ed-bb56-4c34-9db9-da41c572e2b3"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "f0144531-4b92-4495-8627-03e661edbca6"
+      "id": "920a540a-4cba-4b46-9fe3-72acfc1a11ec"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "d58564f0-fc60-468b-869c-a689dfa9f6f1"
+      "id": "97792fa3-65c5-4774-9b58-3702621bad73"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "6b5c9130-68a3-4585-a5e0-756085183ff0"
+      "id": "ddff8da8-5ef9-4523-99c8-182552966998"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "b0ddf4e6-06f9-49de-a09a-db65e82d0875"
+      "id": "ec1bd37a-8af4-46b5-a9fa-294b349976cf"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "cb762374-7b55-45db-a7e6-5c22763bc42a"
+      "id": "6235f2e7-4e62-429c-9811-024a2bf902d5"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "74dcb228-dd5c-4f03-bb53-16ad2afdcbb5"
+      "id": "920743e2-e926-464f-926c-237ba34a18c6"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "4affbae6-4f6c-446c-97c5-5e18852879a9"
+      "id": "3c7ed820-1e81-446e-b6fe-a2379f5f8a85"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "f61021ed-d246-4aea-98ea-18f577f0a4d4"
+      "id": "71d47c91-84d2-4a87-a0e1-dc258807a93d"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "ff20a89f-5ce1-4b5d-8ad2-747221f882d3"
+      "id": "729e47eb-05f3-4d6b-97a6-a3f657cb176e"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "1f5287b6-c040-43b7-bb6e-ea98c24bef72"
+      "id": "f3773ff9-99c8-41ad-b7c2-7b98160bfdbd"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -855,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure>\n",
+        "<figure class=\"margin-caption\">\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -864,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "c9208c77-e982-4514-8888-1e5a905e5d8b"
+      "id": "3b22c8cf-91c1-441a-a807-c668315cc1b0"
     },
     {
       "cell_type": "code",
@@ -897,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "1666142d-3624-47fc-9d65-6a49c5325d1c"
+      "id": "ec46d727-2d6c-4ceb-a569-9d4173eb7c9d"
     }
   ],
   "nbformat": 4,
