--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "444b77a2-ae54-4304-8535-8110f2c5c0bb"
+      "id": "b8248486-2b76-4dc9-973d-195fc7b571dd"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "16743c46-56ae-40e2-9727-0cba275b8c68"
+      "id": "6ad63509-4a01-4726-89bb-aa8c9118110d"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "2c28bc33-2618-4efc-a324-16ffb1dcf2e8"
+      "id": "66251b7d-bc26-471a-886b-701e431b5589"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "57552544-d98d-437c-b25a-f3e9201c1ad3"
+      "id": "1d324699-0b1d-4b16-8f29-4f8fe743a869"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "704d3d4f-63ab-4683-b957-bfd5128a95db"
+      "id": "6673117b-2fe8-45dc-9264-aeb8ab24618f"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "f83ee61a-41b2-4d53-adaa-c0163991674f"
+      "id": "cce0cc7e-25c7-4638-99ed-452856ff87de"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "74b2c065-0ef4-481c-879d-c1023d1888ba"
+      "id": "6e081237-180c-48f0-a4f7-25eab00410e6"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "c4081fd8-8339-480c-884b-490527774541"
+      "id": "6df75093-6818-4b39-aa8b-5a08729e2c28"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "c3417430-03e6-4044-9e6f-04974ac0d626"
+      "id": "9210c58e-05c8-4f67-888e-e63242863b36"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "85bfd233-8d9e-47e5-83f3-cfec4a909c33"
+      "id": "edb03227-f3bf-4f76-b897-7287653b4468"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "15463ede-93dc-462d-a32b-643044d564ef"
+      "id": "509b0504-4cd2-47ba-af7f-bf4a52fe8574"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "7db783da-207c-4a28-b0d8-d068b6fbc22e"
+      "id": "ab4b516e-00d2-42c0-a44a-20d458018262"
     },
     {
       "cell_type": "code",
@@ -491,15 +491,71 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix}\n",
+        "1.2200 & 0.4900 \\\\\n",
+        "1.1700 & 0.4400 \\\\\n",
+        "1.2100 & -0.4500 \\\\\n",
+        "1.2000 & -0.5000 \\\\\n",
+        "-1.2000 & 0.5100 \\\\\n",
+        "-1.2300 & 0.4800 \\\\\n",
+        "-1.2000 & -0.4800 \\\\\n",
+        "-1.1900 & -0.4900 \\\\\n",
+        "0.2000 & 0.0000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
+        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
+        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
+        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
+        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
+        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
+        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
+        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
+        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
+        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
+        "1.2100 \\\\\n",
+        "1.2500 \\\\\n",
+        "1.1000 \\\\\n",
+        "1.1100 \\\\\n",
+        "1.1200 \\\\\n",
+        "1.1300 \\\\\n",
+        "1.1400 \\\\\n",
+        "1.1200 \\\\\n",
+        "3.6000\n",
+        "\\end{bmatrix} +\\begin{bmatrix}\n",
+        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
+        "\\end{bmatrix}\\\\ \\\\\n",
+        "=~& \\begin{bmatrix}\n",
+        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
+        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
+        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
+        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
+        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
+        "\\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
+        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
+        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
+        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
+        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
+        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
+        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
+        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
+        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
+        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
+        "\\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -516,7 +572,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "722e22a6-c9b9-4d1a-88e1-209b504aa1ad"
+      "id": "7efc8df9-304e-4286-9948-c11f51616e46"
     },
     {
       "cell_type": "code",
@@ -636,7 +692,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "138f6cc9-baea-4e72-b705-58f2f5c6a0dc"
+      "id": "80423344-42c8-4719-bb9b-cf72af0b5881"
     },
     {
       "cell_type": "code",
@@ -657,7 +713,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "cb85469c-9046-487c-ba9f-6f6f88f15f6d"
+      "id": "b66cf517-1769-46f4-ab7a-602e3ccd527e"
     },
     {
       "cell_type": "code",
@@ -692,7 +748,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "2afb01cb-a660-4633-bf65-fa0c05ff93c9"
+      "id": "6aedd214-e65c-453e-8368-d691639f956e"
     },
     {
       "cell_type": "code",
@@ -744,7 +800,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "a29cf5c0-1ff0-4703-a351-643c613b090a"
+      "id": "244df691-0f04-4feb-affc-938bd5505213"
     },
     {
       "cell_type": "code",
@@ -769,7 +825,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "a9b3d11e-426e-415d-8a8c-aa9d1385b9d3"
+      "id": "9db7dec8-61f4-4b3a-b957-f5fc6b517f97"
     },
     {
       "cell_type": "code",
@@ -811,7 +867,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "7b1293af-ab4b-4c30-922e-4f0390dcdcdd"
+      "id": "997f08cc-c6b6-41c4-994b-5b681f76425d"
     },
     {
       "cell_type": "code",
@@ -834,7 +890,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "dac95a39-1bb4-42d1-a52b-7739b1163be6"
+      "id": "94b03841-cdc9-4bc4-9ae2-7f70fd2b22a0"
     },
     {
       "cell_type": "code",
@@ -866,7 +922,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "3cccfbfa-ddc5-4777-8530-787dd2ea13d2"
+      "id": "ff1698d2-9ea6-49e1-bb86-da310d4b558c"
     },
     {
       "cell_type": "code",
@@ -886,7 +942,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "5360c7d0-60f9-4e36-ac51-f8127460efba"
+      "id": "c7bfd581-df0d-43f3-b9a1-744e4601877f"
     },
     {
       "cell_type": "code",
@@ -920,7 +976,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "3fdec342-a32d-499f-97c8-d4322aee7964"
+      "id": "fb88c98d-25c9-4cbc-97b8-10052ab0f039"
     },
     {
       "cell_type": "code",
@@ -941,7 +997,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "3bdafe7f-a155-4a5d-a53c-00511b07ba95"
+      "id": "d3d389ab-3c64-481a-930a-473946b25101"
     },
     {
       "cell_type": "code",
@@ -973,7 +1029,7 @@
       "source": [
         "(update)"
       ],
-      "id": "b2383529-4ea6-44ff-bb8b-0fa98b8e7c1e"
+      "id": "499bf7f1-25bf-4594-aae7-643d39b0784b"
     },
     {
       "cell_type": "code",
@@ -993,7 +1049,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "607e4642-3b87-4e18-8d28-77031ad9935e"
+      "id": "b9134b4a-3f04-4576-b246-eae74d448cca"
     },
     {
       "cell_type": "code",
@@ -1025,7 +1081,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "2df06e37-64c4-4105-9be9-e39daa3db416"
+      "id": "6a317917-8ec1-4f46-be1b-770aa01e9de2"
     },
     {
       "cell_type": "code",
@@ -1045,7 +1101,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "3c7a8aa1-b81c-4eb7-90f3-1109e625f9b1"
+      "id": "14b0ffcb-d99c-41cd-800d-df126a67f440"
     },
     {
       "cell_type": "code",
@@ -1077,7 +1133,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "0e0692dc-41e7-4dd7-974e-638ceea6f714"
+      "id": "defdb812-1cb4-425c-a44f-1426742b0e06"
     },
     {
       "cell_type": "code",
@@ -1143,7 +1199,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "a2fb615d-e2fe-45af-9c7e-b585822caf32"
+      "id": "e4aff716-5018-4545-9a24-376500df9ecf"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1236,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "809b9306-5d8a-4e21-8680-1dacdd1d7e5e"
+      "id": "ddb704a3-2a5e-4a42-b702-d4c32e928282"
     },
     {
       "cell_type": "code",
@@ -1234,7 +1290,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "2412adc3-b9f9-4701-81bd-5e9554770f42"
+      "id": "b6dbe0d6-ee23-425d-8b41-df6500f79207"
     },
     {
       "cell_type": "code",
@@ -1254,7 +1310,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "eccd9202-19d3-4cc7-937d-d123eb442dbb"
+      "id": "a906ec08-0246-4375-8e00-2dbffd63e67c"
     },
     {
       "cell_type": "code",
@@ -1294,7 +1350,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "2be79d37-af17-486b-8bad-52d234923215"
+      "id": "ea9bf25c-1944-4db5-a104-ff8c5019155a"
     },
     {
       "cell_type": "code",
@@ -1318,7 +1374,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "4955da05-b102-488d-accb-57334205aecf"
+      "id": "ee14434f-afe7-40ac-9f96-fa287c265faf"
     },
     {
       "cell_type": "code",
@@ -1372,7 +1428,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "27aa6298-cf90-46ec-ac8c-ee48d7112864"
+      "id": "bc50dd54-d12f-47c4-b6c3-c366ef24f01d"
     },
     {
       "cell_type": "code",
@@ -1393,7 +1449,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "a1251797-b2a2-4a0a-b8c8-032ed16cc27d"
+      "id": "a34e4017-f811-4b67-bcdc-9c8a4e569c30"
     },
     {
       "cell_type": "code",
